# qt-working-diagrams

./: .gitignore  .ycm_extra_conf.py  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCKnopkaInfo.qml  DCKnopkaKruglaya.qml  DCKnopkaMenu.qml  DCKnopkaNazad.qml  DCKnopkaOriginal.qml  DCKnopkaPoisk.qml  DCLogoTMK.qml  DCMenu.qml  DCStr.qml  DCStrMenu.qml  DCStrStrelkaNazad.qml  DCStrelkaNazad.qml  DCTextEdit.qml  DCTextInput.qml  DCZonaGlavnaya.qml  DCZonaSpisok.qml  LICENSE.BSD-3-Clause.md  Main.qml  MenuSpisok.qml  PathViewSpisok.qml  Qt5_AltLinux.txt  Qt6_AltLinux.txt  README.md  README.ru.md  StrAvtor.qml  StrDannie.qml  StrDebug.qml  StrElement.qml  StrFileDialog.qml  StrMenu.qml  StrOpisanie.qml  StrSostav.qml  StrSpisok.qml  StrSvet.qml  (+29 more)
android/: AndroidManifest.xml
icons/ico/: ru.Mentor.rc  ru.WorkingDiagrams.rc
js/: DCFunkciiJS.js  DCZonaGlavnaya.js  jsJSON.js  jsProgress.js
qml/: DCKnopkaVidelit.qml  DCMenu.qml  DCTextInput.qml  DCTextUdalit.qml  PathViewSpisok.qml  ru.Mentor.qml  ru.WorkingDiagrams.qml
qml/DCButtons/: DCKnopkaInfo.qml  DCKnopkaKruglaya.qml  DCKnopkaMenu.qml  DCKnopkaMinus.qml  DCKnopkaNastroiki.qml  DCKnopkaNazad.qml  DCKnopkaOk.qml  DCKnopkaOriginal.qml  DCKnopkaPlan.qml  DCKnopkaPlus.qml  DCKnopkaPoisk.qml  DCKnopkaPovorotPo.qml  DCKnopkaPovorotProtiv.qml  DCKnopkaRuka.qml  DCKnopkaSidebar.qml  DCKnopkaSozdat.qml  DCKnopkaVidelit.qml  DCKnopkaVniz.qml  DCKnopkaVpered.qml  DCKnopkaVverh.qml  DCKnopkaZakrit.qml  DCTabButton.qml  qmldir
qml/DCMethods/: DCFileDialog.qml  DCFontAuto.qml  DCListView.qml  DCLoad.qml  DCLogo.qml  DCLogoTMK.qml  DCMenu.qml  DCPassword.qml  DCPathView.qml  DCPdfMPV.qml  DCPdfScroll.qml  DCPdfSpacing.qml  DCPoisk.qml  DCProgress.qml  DCScale.qml  DCScrollbar.qml  DCSidebar.qml  DCSpacing.qml  DCSpinBox.qml  DCTextEdit.qml  DCTextInput.qml  DCTextUdalit.qml  DCVopros.qml  qmldir
qml/DCPages/: StrAnimaciya.qml  StrDannie.qml  StrDebug.qml  StrElement.qml  StrFileDialog.qml  StrInstrukciya.qml  StrJurnal.qml  StrKatalog.qml  StrMenu.qml  StrOpisanie.qml  StrPdf.qml  StrPlan.qml  StrSpisok.qml  Stranica.qml  qmldir
qml/DCZones/: ZonaDannie.qml  ZonaElement.qml  ZonaFileDialog.qml  ZonaSpisok.qml  qmldir
qml/buttons/: DCKnopkaInfo.qml  DCKnopkaKruglaya.qml  DCKnopkaMap.qml  DCKnopkaMenu.qml  DCKnopkaMinus.qml  DCKnopkaNastroiki.qml  DCKnopkaNazad.qml  DCKnopkaOk.qml  DCKnopkaOriginal.qml  DCKnopkaPlan.qml  DCKnopkaPlus.qml  DCKnopkaPoisk.qml  DCKnopkaSozdat.qml  DCKnopkaVniz.qml  DCKnopkaVpered.qml  DCKnopkaVverh.qml  DCKnopkaZakrit.qml  qmldir
qml/methods/: DCLogoTMK.qml  DCMenu.qml  DCPassword.qml  DCPdfMPV.qml  DCPoisk.qml  DCProgress.qml  DCScale.qml  DCSpinBox.qml  DCTextEdit.qml  DCTextInput.qml  DCTextUdalit.qml  PathViewSpisok.qml  qmldir
qml/pages/: StrDannie.qml  StrDebug.qml  StrElement.qml  StrFileDialog.qml  StrInstrukciya.qml  StrMenu.qml  StrOpisanie.qml  StrPdf.qml  StrPlan.qml  StrSpisok.qml  Stranica.qml
qml/zones/: ZonaDannie.qml  ZonaElement.qml  ZonaFileDialog.qml  ZonaSpisok.qml  qmldir
src/: copydannie.cpp  copydannie.h  copykatalog.cpp  copykatalog.h  copyplan.cpp  copyplan.h  cppqml.cpp  cppqml.h  datadannie.cpp  datadannie.h  dataelement.cpp  dataelement.h  datakatalog.cpp  datakatalog.h  dataplan.cpp  dataplan.h  dataspisok.cpp  dataspisok.h  datatitul.cpp  datatitul.h  dcclass.cpp  dcclass.h  dcdb.cpp  dcdb.h  dcdbdata.cpp  dcdbdata.h  dcfiledialog.cpp  dcfiledialog.h  dclogger.cpp  dclogger.h  dcpdfpoisk.cpp  dcpdfpoisk.h  main.cpp
workingdata/: 000000000.dc
